# agentcore-digestor-core

./: .gitignore  dev.plan  dev.tfvars  main.tf  output.json  requirements.txt  variables.tf
Backup/: Dockerfile.agent
Backup/Old Tools/: schema_normalizer_BKP.py
agentcoreDigestor/: .bedrock_agentcore.yaml  pyproject.toml
agentcoreDigestor/.bedrock_agentcore/agentcore_digestor_agent/: Dockerfile
agentcoreDigestor/src/: main.py
agentcoreDigestor/src/tools/: analyze_schema.py  convert_semi_tabular.py  create_iceberg_table.py  detect_file_type.py  detect_file_type_BKP.py  load_into_iceberg.py  raw_ingest.py  schema_normalizer.py  schema_to_glue_types.py  validate_data.py
agentcore_manager/: __init__.py
agentcore_manager/config/: settings.py
agentcore_manager/core/: agent.py  gateway.py  invoke.py  policies.py  runtime.py  tools.py
agentcore_manager/scripts/: setup_agentcore.py  test_invoke.py
agentcore_manager/utils/: aws_clients.py  exceptions.py  logging.py  models.py
documents/: AGENTCORE_DIGESTOR_STATE.md  AgentCore Python SDK Guidelines.md  Terraform Approach Guidelines.md  sales_orders_demo.xlsx  sales_orders_txtdemo.txt  sample.csv  sample_dirty_2.csv  sample_dirty_3.csv
modules/agentcore_runtime/: main.tf  outputs.tf  variables.tf
modules/api_gateway/: main.tf  outputs.tf  variables.tf
modules/ecr_repositories/: main.tf  outputs.tf  variables.tf
modules/glue_catalog/: main.tf  outputs.tf
modules/iam_roles/: main.tf  outputs.tf  variables.tf
modules/lambda_functions/: main.tf  outputs.tf  variables.tf
modules/lambda_layers/: main.tf  (+2 more)
(+19 files in other folders)
